// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleDetailGeneral /> should render with [paired=false] 1`] = `
<div>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Host
        </th>
        <td
          className="col-xs-8"
        >
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [paired=true] 1`] = `
<div>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Host
        </th>
        <td
          className="col-xs-8"
        >
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [srna=false] 1`] = `
<div>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Host
        </th>
        <td
          className="col-xs-8"
        >
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [srna=true] 1`] = `
<div>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      <tr>
        <th
          className="col-xs-4"
        >
          Host
        </th>
        <td
          className="col-xs-8"
        >
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            sRNA
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;
